Tried to fix session bleed and fixed z-index issues for login screen.

--- a/css/login.css
+++ b/css/login.css
@@ -9,6 +9,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    position: fixed;
+    z-index: 5;
+
+    background-color: var(--bg);
 }
 
 #login-screen[hidden] {
