--- a/css/root.css
+++ b/css/root.css
@@ -137,12 +137,12 @@ body, html {
 
 
 #nav-bar {
-    position: absolute;
+    position: fixed;
     bottom: 0;
 
     background-color: var(--bg);
     border-top: 1px solid var(--border);
-    z-index: 3;
+    z-index: 2;
     width: 100vw;
     height: 55px;
     display: flex;
